Finished beta version of the website

--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <title>Ghoul Client | An underway Minecraft Java Client</title>
+  <link rel="icon" href="/assets/logo.png">
+  <link href='/src/css/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+  <div class="top-nav">
+    <div class="top-nav-content">
+      <h1>Ghoul Client</h1>
+      <a href="https://github.com/HaydynDevs">Github</a>
+      <a href="https://discord.gg/gmvS9NEuEn">Discord</a>
+    </div>
+  </div>
+  <div class="hero">
+    <img src="/assets/logo.png" height="221" width="221">
+    <div class="heroText">
+      <h1>Ghoul Client will be here soon!</h1>
+      <p>Ghoul Client is a (non modpack) Minecraft client built for enhancing game play and connecting new players.</p>
+      <p>It's expected to start in <b>May of 2026</b> so stay tuned!</p>
+      <p>We are also looking for new developers. Interested? Join our discord server.</p>
+    </div>
+  </div>
+  <script defer type="text/javascript" src="/src/js/"></script>
 </body>
 </html>
