Fixed Readme, as well as dev.nix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="top-nav">
     <div class="top-nav-content">
-      <h1>Ghoul Client</h1>
+      <h1 class="logo">Ghoul Client</h1>
       <a href="https://github.com/HaydynDevs">Github</a>
       <a href="https://discord.gg/gmvS9NEuEn">Discord</a>
     </div>
