--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <meta name="description" content="Ghoul Client is a (non modpack) Minecraft client built for enhancing game play and connecting new players.">
+  <meta property="og:image" content="/assets/logo.png">
+  <meta property="og:description" content="Ghoul Client is a (non modpack) Minecraft client built for enhancing game play and connecting new players.">
+  <meta property="og:type" content="website">
   <title>Ghoul Client | An underway Minecraft Java Client</title>
   <link rel="icon" href="/assets/logo.png">
   <link href='/src/css/style.css' rel='stylesheet'>
